--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     
   cupertino_icons: ^0.1.2
   flutter_dialogflow: ^0.1.0
+  clippy_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
